--- a/arch/arm64/boot/dts/qcom/sdmmagpie.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdmmagpie.dtsi
@@ -488,7 +488,7 @@
 				vendor {
 					compatible = "android,vendor";
 					dev = "/dev/block/platform/soc/1d84000.ufshc/by-name/vendor";
-					type = "ext4";
+					type = "ext4,erofs,f2fs";
 					mnt_flags = "ro,barrier=1,discard";
 					fsmgr_flags = "wait,avb";
 					status = "ok";
