surya: surya Regenerate
Signed-off-by: Syahid <syahidselaluspd708@gmail.com>

--- a/arch/arm64/configs/surya_defconfig
+++ b/arch/arm64/configs/surya_defconfig
@@ -24,7 +24,7 @@ CONFIG_BATTERY_SAVER=y
 CONFIG_WIREGUARD=y
 
 # thermal simple
-CONFIG_MSM_THERMAL_SIMPLE=y
+# CONFIG_MSM_THERMAL_SIMPLE is not set
 
 # simple gpu algorithm
 CONFIG_SIMPLE_GPU_ALGORITHM=y
@@ -55,7 +55,11 @@ CONFIG_ZRAM_SWAPPINESS=200
 CONFIG_ZRAM_FROM_8GB_RAM=7
 CONFIG_ZRAM_FROM_6GB_RAM=5
 CONFIG_CRYPTO_DEFLATE=y
-CONFIG_CRYPTO_842=y
+CONFIG_DEFLATE_COMPRESS=y
+CONFIG_DEFLATE_DECOMPRESS=y
+# CONFIG_CRYPTO_842 is not set
+# CONFIG_842_COMPRESS is not set
+# CONFIG_842_DECOMPRESS is not set
 # CONFIG_RD_LZ4 is not set
 CONFIG_CRYPTO_LZ4=y
 CONFIG_LZ4_COMPRESS=y
@@ -75,17 +79,17 @@ CONFIG_ZSTD_COMPRESS=y
 CONFIG_ZSTD_DECOMPRESS=y
 
 # atoll
-CONFIG_ARCH_ATOLL=y
-CONFIG_PINCTRL_ATOLL=y
-CONFIG_MSM_GCC_ATOLL=y
-CONFIG_MSM_GPUCC_ATOLL=y
-CONFIG_MSM_VIDEOCC_ATOLL=y
-CONFIG_MSM_DEBUGCC_ATOLL=y
-CONFIG_MSM_CAMCC_ATOLL=y
-CONFIG_MSM_DISPCC_ATOLL=y
-CONFIG_MSM_SCC_ATOLL=y
-CONFIG_QCOM_ATOLL_LLCC=y
-CONFIG_QTI_PDC_ATOLL=y
+# CONFIG_ARCH_ATOLL is not set
+# CONFIG_PINCTRL_ATOLL is not set
+# CONFIG_MSM_GCC_ATOLL is not set
+# CONFIG_MSM_GPUCC_ATOLL is not set
+# CONFIG_MSM_VIDEOCC_ATOLL is not set
+# CONFIG_MSM_DEBUGCC_ATOLL is not set
+# CONFIG_MSM_CAMCC_ATOLL is not set
+# CONFIG_MSM_DISPCC_ATOLL is not set
+# CONFIG_MSM_SCC_ATOLL is not set
+# CONFIG_QCOM_ATOLL_LLCC is not set
+# CONFIG_QTI_PDC_ATOLL is not set
 
 # sdmmagpie
 CONFIG_ARCH_SDMMAGPIE=y
@@ -101,30 +105,30 @@ CONFIG_QCOM_SDMMAGPIE_LLCC=y
 CONFIG_QTI_PDC_SDMMAGPIE=y
 
 # sm6150
-CONFIG_ARCH_SM6150=y
-CONFIG_PINCTRL_SM6150=y
-CONFIG_MSM_GCC_SM6150=y
-CONFIG_MSM_GPUCC_SM6150=y
-CONFIG_MSM_VIDEOCC_SM6150=y
-CONFIG_MSM_DEBUGCC_SM6150=y
-CONFIG_MSM_CAMCC_SM6150=y
-CONFIG_MSM_DISPCC_SM6150=y
-CONFIG_MSM_SCC_SM6150=y
-CONFIG_QCOM_SM6150_LLCC=y
-CONFIG_QTI_PDC_SM6150=y
+# CONFIG_ARCH_SM6150 is not set
+# CONFIG_PINCTRL_SM6150 is not set
+# CONFIG_MSM_GCC_SM6150 is not set
+# CONFIG_MSM_GPUCC_SM6150 is not set
+# CONFIG_MSM_VIDEOCC_SM6150 is not set
+# CONFIG_MSM_DEBUGCC_SM6150 is not set
+# CONFIG_MSM_CAMCC_SM6150 is not set
+# CONFIG_MSM_DISPCC_SM6150 is not set
+# CONFIG_MSM_SCC_SM6150 is not set
+# CONFIG_QCOM_SM6150_LLCC is not set
+# CONFIG_QTI_PDC_SM6150 is not set
 
 # trinket
-CONFIG_ARCH_TRINKET=y
-CONFIG_PINCTRL_TRINKET=y
-CONFIG_MSM_GCC_TRINKET=y
-CONFIG_MSM_GPUCC_TRINKET=y
-CONFIG_MSM_VIDEOCC_TRINKET=y
-CONFIG_MSM_DEBUGCC_TRINKET=y
-CONFIG_MSM_CAMCC_TRINKET=y
-CONFIG_MSM_DISPCC_TRINKET=y
-CONFIG_MSM_SCC_TRINKET=y
-CONFIG_QCOM_TRINKET_LLCC=y
-CONFIG_QTI_PDC_TRINKET=y
+# CONFIG_ARCH_TRINKET is not set
+# CONFIG_PINCTRL_TRINKET is not set
+# CONFIG_MSM_GCC_TRINKET is not set
+# CONFIG_MSM_GPUCC_TRINKET is not set
+# CONFIG_MSM_VIDEOCC_TRINKET is not set
+# CONFIG_MSM_DEBUGCC_TRINKET is not set
+# CONFIG_MSM_CAMCC_TRINKET is not set
+# CONFIG_MSM_DISPCC_TRINKET is not set
+# CONFIG_MSM_SCC_TRINKET is not set
+# CONFIG_QCOM_TRINKET_LLCC is not set
+# CONFIG_QTI_PDC_TRINKET is not set
 
 # sm8150
 # CONFIG_ARCH_SM8150 is not set
@@ -161,7 +165,7 @@ CONFIG_MMU=y
 CONFIG_ARM64_PAGE_SHIFT=12
 CONFIG_ARM64_CONT_SHIFT=4
 CONFIG_ARCH_MMAP_RND_BITS_MIN=18
-CONFIG_ARCH_MMAP_RND_BITS_MAX=24
+CONFIG_ARCH_MMAP_RND_BITS_MAX=48
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MIN=11
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MAX=16
 CONFIG_STACKTRACE_SUPPORT=y
@@ -184,7 +188,7 @@ CONFIG_SWIOTLB=y
 CONFIG_IOMMU_HELPER=y
 CONFIG_KERNEL_MODE_NEON=y
 CONFIG_FIX_EARLYCON_MEM=y
-CONFIG_PGTABLE_LEVELS=3
+CONFIG_PGTABLE_LEVELS=5
 CONFIG_ARCH_SUPPORTS_UPROBES=y
 CONFIG_ARCH_PROC_KCORE_TEXT=y
 # CONFIG_QTI_GVM is not set
@@ -321,8 +325,8 @@ CONFIG_NET_NS=y
 CONFIG_SCHED_AUTOGROUP=y
 CONFIG_SCHED_TUNE=y
 CONFIG_CPUSET_ASSIST=y
-CONFIG_CPUSET_AUDIO_APP="4-5"
-CONFIG_CPUSET_BG="2-5"
+CONFIG_CPUSET_AUDIO_APP="0-7"
+CONFIG_CPUSET_BG="1-5"
 CONFIG_CPUSET_CAMERA="0-7"
 CONFIG_CPUSET_FG="0-7"
 CONFIG_CPUSET_GAME="0-7"
@@ -452,7 +456,7 @@ CONFIG_HAVE_MOD_ARCH_SPECIFIC=y
 CONFIG_MODULES_USE_ELF_RELA=y
 CONFIG_ARCH_HAS_ELF_RANDOMIZE=y
 CONFIG_HAVE_ARCH_MMAP_RND_BITS=y
-CONFIG_ARCH_MMAP_RND_BITS=18
+CONFIG_ARCH_MMAP_RND_BITS=48
 CONFIG_HAVE_ARCH_MMAP_RND_COMPAT_BITS=y
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS=11
 # CONFIG_HAVE_ARCH_HASH is not set
@@ -732,15 +736,15 @@ CONFIG_QCOM_FALKOR_ERRATUM_E1041=y
 CONFIG_ARM64_4K_PAGES=y
 # CONFIG_ARM64_16K_PAGES is not set
 # CONFIG_ARM64_64K_PAGES is not set
-CONFIG_ARM64_VA_BITS_39=y
-# CONFIG_ARM64_VA_BITS_48 is not set
-CONFIG_ARM64_VA_BITS=39
+# CONFIG_ARM64_VA_BITS_39 is not set
+CONFIG_ARM64_VA_BITS_48=y
+CONFIG_ARM64_VA_BITS=48
 # CONFIG_CPU_BIG_ENDIAN is not set
 CONFIG_SCHED_MC=y
 # CONFIG_SCHED_SMT is not set
 CONFIG_NR_CPUS=32
-CONFIG_LITTLE_CPU_MASK=512
-CONFIG_BIG_CPU_MASK=800
+CONFIG_LITTLE_CPU_MASK=60
+CONFIG_BIG_CPU_MASK=128
 CONFIG_HOTPLUG_CPU=y
 CONFIG_ARCH_ENABLE_MEMORY_HOTPLUG=y
 CONFIG_ARCH_ENABLE_MEMORY_HOTREMOVE=y
@@ -755,7 +759,7 @@ CONFIG_PREEMPT_COUNT=y
 # CONFIG_HZ_250 is not set
 CONFIG_HZ_300=y
 # CONFIG_HZ_1000 is not set
-CONFIG_HZ=1000
+CONFIG_HZ=300
 CONFIG_SCHED_HRTICK=y
 CONFIG_ARCH_SUPPORTS_DEBUG_PAGEALLOC=y
 CONFIG_ARCH_HAS_HOLES_MEMORYMODEL=y
@@ -1048,21 +1052,21 @@ CONFIG_INET_UDP_DIAG=y
 # CONFIG_INET_RAW_DIAG is not set
 CONFIG_INET_DIAG_DESTROY=y
 CONFIG_TCP_CONG_ADVANCED=y
-CONFIG_TCP_CONG_BIC=y
+# CONFIG_TCP_CONG_BIC is not set
 CONFIG_TCP_CONG_CUBIC=y
 CONFIG_TCP_CONG_WESTWOOD=y
-CONFIG_TCP_CONG_HTCP=y
-CONFIG_TCP_CONG_HSTCP=y
-CONFIG_TCP_CONG_HYBLA=y
-CONFIG_TCP_CONG_VEGAS=y
-CONFIG_TCP_CONG_NV=y
-CONFIG_TCP_CONG_SCALABLE=y
-CONFIG_TCP_CONG_LP=y
-CONFIG_TCP_CONG_VENO=y
-CONFIG_TCP_CONG_YEAH=y
-CONFIG_TCP_CONG_ILLINOIS=y
-CONFIG_TCP_CONG_DCTCP=y
-CONFIG_TCP_CONG_CDG=y
+# CONFIG_TCP_CONG_HTCP is not set
+# CONFIG_TCP_CONG_HSTCP is not set
+# CONFIG_TCP_CONG_HYBLA is not set
+# CONFIG_TCP_CONG_VEGAS is not set
+# CONFIG_TCP_CONG_NV is not set
+# CONFIG_TCP_CONG_SCALABLE is not set
+# CONFIG_TCP_CONG_LP is not set
+# CONFIG_TCP_CONG_VENO is not set
+# CONFIG_TCP_CONG_YEAH is not set
+# CONFIG_TCP_CONG_ILLINOIS is not set
+# CONFIG_TCP_CONG_DCTCP is not set
+# CONFIG_TCP_CONG_CDG is not set
 CONFIG_TCP_CONG_BBR=y
 # CONFIG_DEFAULT_CUBIC is not set
 # CONFIG_DEFAULT_HTCP is not set
