--- a/arch/arm64/boot/dts/qcom/sdmmagpie.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdmmagpie.dtsi
@@ -25,7 +25,7 @@
 #include <dt-bindings/clock/qcom,cpucc-sm8150.h>
 #include <dt-bindings/msm/msm-bus-ids.h>
 
-#define MHZ_TO_MBPS(mhz, w) ((mhz * 10000000 * w) / (2048 * 2048))
+#define MHZ_TO_MBPS(mhz, w) ((mhz * 1000000 * w) / (512 * 512))
 #define BW_OPP_ENTRY(mhz, w) opp-mhz {opp-hz = /bits/ 64 <MHZ_TO_MBPS(mhz, w)>;}
 
 / {
@@ -60,7 +60,7 @@
 			compatible = "arm,armv8";
 			reg = <0x0 0x0>;
 			enable-method = "psci";
-			capacity-dmips-mhz = <3200>;
+			capacity-dmips-mhz = <256>;
 			sched-energy-costs = <&CPU_COST_0 &CLUSTER_COST_0>;
 			cache-size = <0x8000>;
 			next-level-cache = <&L2_0>;
@@ -99,7 +99,7 @@
 			compatible = "arm,armv8";
 			reg = <0x0 0x100>;
 			enable-method = "psci";
-			capacity-dmips-mhz = <3200>;
+			capacity-dmips-mhz = <256>;
 			sched-energy-costs = <&CPU_COST_0 &CLUSTER_COST_0>;
 			cache-size = <0x8000>;
 			next-level-cache = <&L2_100>;
@@ -133,7 +133,7 @@
 			compatible = "arm,armv8";
 			reg = <0x0 0x200>;
 			enable-method = "psci";
-			capacity-dmips-mhz = <3200>;
+			capacity-dmips-mhz = <256>;
 			sched-energy-costs = <&CPU_COST_0 &CLUSTER_COST_0>;
 			cache-size = <0x8000>;
 			next-level-cache = <&L2_200>;
@@ -166,7 +166,7 @@
 			compatible = "arm,armv8";
 			reg = <0x0 0x300>;
 			enable-method = "psci";
-			capacity-dmips-mhz = <3200>;
+			capacity-dmips-mhz = <256>;
 			sched-energy-costs = <&CPU_COST_0 &CLUSTER_COST_0>;
 			cache-size = <0x8000>;
 			next-level-cache = <&L2_300>;
@@ -199,7 +199,7 @@
 			compatible = "arm,armv8";
 			reg = <0x0 0x400>;
 			enable-method = "psci";
-			capacity-dmips-mhz = <3200>;
+			capacity-dmips-mhz = <256>;
 			sched-energy-costs = <&CPU_COST_0 &CLUSTER_COST_0>;
 			cache-size = <0x8000>;
 			next-level-cache = <&L2_400>;
@@ -232,7 +232,7 @@
 			compatible = "arm,armv8";
 			reg = <0x0 0x500>;
 			enable-method = "psci";
-			capacity-dmips-mhz = <3200>;
+			capacity-dmips-mhz = <256>;
 			sched-energy-costs = <&CPU_COST_0 &CLUSTER_COST_0>;
 			cache-size = <0x8000>;
 			next-level-cache = <&L2_500>;
@@ -265,7 +265,7 @@
 			compatible = "arm,armv8";
 			reg = <0x0 0x600>;
 			enable-method = "psci";
-			capacity-dmips-mhz = <4800>;
+			capacity-dmips-mhz = <512>;
 			sched-energy-costs = <&CPU_COST_1 &CLUSTER_COST_1>;
 			cache-size = <0x10000>;
 			next-level-cache = <&L2_600>;
@@ -307,7 +307,7 @@
 			compatible = "arm,armv8";
 			reg = <0x0 0x700>;
 			enable-method = "psci";
-			capacity-dmips-mhz = <4800>;
+			capacity-dmips-mhz = <512>;
 			sched-energy-costs = <&CPU_COST_1 &CLUSTER_COST_1>;
 			cache-size = <0x10000>;
 			next-level-cache = <&L2_700>;
@@ -389,53 +389,53 @@
 
 		CPU_COST_0: core-cost0 {
 			busy-cost-data = <
-				576000	500
-				768000	700
-				1017600	1024
-				1248000	1555
-				1324800	2000
-				1497600	2400
-				1612800	2666
-				1708800	3000
-				1804800	3200
+				576000	16
+				768000	32
+				1017600	64
+				1248000	100
+				1324800	128
+				1497600	155
+				1612800	170
+				1708800	200
+				1804800	256
 			>;
 			idle-cost-data = <
-				120 120 120 120 120
+				5 4 3 2 1
 			>;
 		};
 
 		CPU_COST_1: core-cost1 {
 			busy-cost-data = <
-				652800	600
-				806400	800
-				979200	900
-				1094400	1024
-				1209600	1555
-				1324800	2000
-				1555200	2666
-				1708800	3000
-				1843200	3200
-				1939200	3500
-				2169600	3700
-				2208000	4000
-				2304000	4800
+				652800	16
+				806400	32
+				979200	40
+				1094400	64
+				1209600	100
+				1324800	128
+				1555200	180
+				1708800	200
+				1843200	256
+				1939200	270
+				2169600	280
+				2208000	500
+				2304000	512
 			>;
 			idle-cost-data = <
-				120 120 120 120 120
+				5 4 3 2 1
 			>;
 		};
 
 		CLUSTER_COST_0: cluster-cost0 {
 			busy-cost-data = <
-				576000	20
-				768000	30
-				1017600	40
-				1248000	50
-				1324800	60
-				1497600	70
-				1612800	80
-				1708800	90
-				1804800	100
+				576000	1
+				768000	2
+				1017600	3
+				1248000	4
+				1324800	5
+				1497600	6
+				1612800	7
+				1708800	8
+				1804800	9
 			>;
 			idle-cost-data = <
 				5 4 3 2 1
@@ -444,19 +444,19 @@
 
 		CLUSTER_COST_1: cluster-cost1 {
 			busy-cost-data = <
-				652800	20
-				806400	30
-				979200	40
-				1094400	50
-				1209600	60
-				1324800	70
-				1555200	80
-				1708800	90
-				1843200	100
-				1939200	120
-				2169600	130
-				2208000	140
-				2304000	150
+				652800	1
+				806400	2
+				979200	3
+				1094400	4
+				1209600	5
+				1324800	6
+				1555200	7
+				1708800	8
+				1843200	9
+				1939200	10
+				2169600	11
+				2208000	12
+				2304000	13
 			>;
 			idle-cost-data = <
 				5 4 3 2 1
@@ -470,8 +470,7 @@
 	};
 
 	chosen {
-		bootargs = "rcupdate.rcu_expedited=1 rcupdate.rcu_normal_after_boot=1 rcu_nocbs=0-7 noirqdebug nosoftlockup mce=ignore_ce kpti=off";
-		rng-seed = <0x12345678>;
+		bootargs = "rcu_nocbs=0-7 noirqdebug";
 	};
 
 	soc: soc { };
@@ -488,9 +487,9 @@
 				vendor {
 					compatible = "android,vendor";
 					dev = "/dev/block/platform/soc/1d84000.ufshc/by-name/vendor";
-					type = "ext4,erofs,f2fs";
+					type = "f2fs";
 					mnt_flags = "ro,barrier=1,discard";
-					fsmgr_flags = "wait,avb";
+					fsmgr_flags = "wait";
 					status = "ok";
 				};
 			};
@@ -1598,7 +1597,7 @@
 
 	qcom,msm_fastrpc {
 		compatible = "qcom,msm-fastrpc-compute";
-		qcom,rpc-latency-us = <1000>;
+		qcom,rpc-latency-us = <650>;
 		qcom,adsp-remoteheap-vmid = <22 37>;
 		qcom,fastrpc-adsp-audio-pdr;
 		qcom,fastrpc-adsp-sensors-pdr;
@@ -1813,8 +1812,8 @@
 
 				msm_cdsp_rm: qcom,msm_cdsp_rm {
 					compatible = "qcom,msm-cdsp-rm";
-					qcom,qos-latency-us = <120>;
-					qcom,qos-maxhold-ms = <120>;
+					qcom,qos-latency-us = <30>;
+					qcom,qos-maxhold-ms = <30>;
 					qcom,compute-cx-limit-en;
 					qcom,compute-priority-mode = <2>;
 					#cooling-cells = <2>;
@@ -2161,10 +2160,10 @@
 
 		/* PM QoS */
 		qcom,pm-qos-irq-type = "affine_irq";
-		qcom,pm-qos-irq-latency = <120 120>;
+		qcom,pm-qos-irq-latency = <30 30>;
 		qcom,pm-qos-cpu-groups = <0x3f 0xc0>;
-		qcom,pm-qos-cmdq-latency-us = <120 120>, <120 120>;
-		qcom,pm-qos-legacy-latency-us = <120 120>, <120 120>;
+		qcom,pm-qos-cmdq-latency-us = <30 30>, <30 30>;
+		qcom,pm-qos-legacy-latency-us = <30 30>, <30 30>;
 
 		clocks = <&clock_gcc GCC_SDCC1_AHB_CLK>,
 			<&clock_gcc GCC_SDCC1_APPS_CLK>,
@@ -2233,9 +2232,9 @@
 
 		/* PM QoS */
 		qcom,pm-qos-irq-type = "affine_irq";
-		qcom,pm-qos-irq-latency = <120 120>;
+		qcom,pm-qos-irq-latency = <30 30>;
 		qcom,pm-qos-cpu-groups = <0x3f 0xc0>;
-		qcom,pm-qos-legacy-latency-us = <120 120>, <120 120>;
+		qcom,pm-qos-legacy-latency-us = <30 30>, <30 30>;
 
 		clocks = <&clock_gcc GCC_SDCC2_AHB_CLK>,
 			<&clock_gcc GCC_SDCC2_APPS_CLK>;
@@ -2400,7 +2399,7 @@
 
 		/* PM QoS */
 		qcom,pm-qos-cpu-groups = <0x3f 0xC0>;
-		qcom,pm-qos-cpu-group-latency-us = <120 120>;
+		qcom,pm-qos-cpu-group-latency-us = <30 30>;
 		qcom,pm-qos-default-cpu = <0>;
 
 		pinctrl-names = "dev-reset-assert", "dev-reset-deassert";
@@ -2814,14 +2813,26 @@
 		BW_OPP_ENTRY( 600, 16); /*  9155 MB/s */
 		BW_OPP_ENTRY( 806, 16); /* 12298 MB/s */
 		BW_OPP_ENTRY( 933, 16); /* 14236 MB/s */
-		BW_OPP_ENTRY(1100, 16); /* 20000 MB/s */
+		BW_OPP_ENTRY(1000, 16); /* 20000 MB/s */
+		BW_OPP_ENTRY(1100, 16); /* 21000 MB/s */
+		BW_OPP_ENTRY(1200, 16); /* 22000 MB/s */
 		BW_OPP_ENTRY(1300, 16); /* 23000 MB/s */
+		BW_OPP_ENTRY(1400, 16); /* 24000 MB/s */
 		BW_OPP_ENTRY(1500, 16); /* 25000 MB/s */
+		BW_OPP_ENTRY(1600, 16); /* 26000 MB/s */
 		BW_OPP_ENTRY(1700, 16); /* 27000 MB/s */
+		BW_OPP_ENTRY(1800, 16); /* 28000 MB/s */
+		BW_OPP_ENTRY(1900, 16); /* 29000 MB/s */
 		BW_OPP_ENTRY(2000, 16); /* 30000 MB/s */
+		BW_OPP_ENTRY(2100, 16); /* 31000 MB/s */
+		BW_OPP_ENTRY(2200, 16); /* 32000 MB/s */
 		BW_OPP_ENTRY(2300, 16); /* 33000 MB/s */
+		BW_OPP_ENTRY(2400, 16); /* 34000 MB/s */
 		BW_OPP_ENTRY(2500, 16); /* 35000 MB/s */
+		BW_OPP_ENTRY(2600, 16); /* 36000 MB/s */
 		BW_OPP_ENTRY(2700, 16); /* 37000 MB/s */
+		BW_OPP_ENTRY(2800, 16); /* 38000 MB/s */
+		BW_OPP_ENTRY(2900, 16); /* 39000 MB/s */
 		BW_OPP_ENTRY(3000, 16); /* 40000 MB/s */
 	};
 
@@ -2928,11 +2939,11 @@
 		qcom,target-dev = <&cpu0_cpu_l3_lat>;
 		qcom,cachemiss-ev = <0x17>;
 		qcom,core-dev-table =
-			<  768000  300000000 >,
 			< 1017600  556800000 >,
 			< 1248000  768000000 >,
-			< 1497000  940800000 >,
-			< 1804800 1459200000 >;
+			< 1497600 1017600000 >,
+			< 1708800 1324800000 >,
+			< 1804800 1497600000 >;
 	};
 
 	cpu6_cpu_l3_lat: qcom,cpu6-cpu-l3-lat {
@@ -2948,11 +2959,11 @@
 		qcom,target-dev = <&cpu6_cpu_l3_lat>;
 		qcom,cachemiss-ev = <0x17>;
 		qcom,core-dev-table =
-			< 1094000  556800000 >,
-			< 1324000  768000000 >,
-			< 1708800 1190400000 >,
-			< 1939000 1382400000 >,
-			< 2304000 1459200000 >;
+			< 1324000  652800000 >,
+			< 1708800  806400000 >,
+			< 1939000 1209600000 >,
+			< 2169000 1324800000 >,
+			< 2304000 1555200000 >;
 	};
 
 	cpu0_cpu_llcc_lat: qcom,cpu0-cpu-llcc-lat {
@@ -2996,8 +3007,8 @@
 		qcom,target-dev = <&cpu6_cpu_llcc_lat>;
 		qcom,cachemiss-ev = <0x2A>;
 		qcom,core-dev-table =
-			<  652800 MHZ_TO_MBPS( 547, 16) >,
-			<  806400 MHZ_TO_MBPS( 466, 16) >,
+			<  652800 MHZ_TO_MBPS( 466, 16) >,
+			<  806400 MHZ_TO_MBPS( 600, 16) >,
 			<  979200 MHZ_TO_MBPS( 806, 16) >,
 			< 1094400 MHZ_TO_MBPS( 933, 16) >,
 			< 1209600 MHZ_TO_MBPS(1100, 16) >,
